fix some issues are rename the package